ON-6: Created coker nginx file  setup

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello this is docker image creation</h1>
+    <h2>Finally Learnt Jira ,docker,github</h2>
 </body>
 </html>
