ON-8: Added jenkins file to github repo for ci/cd pipeline

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello this is docker image creation</h1>
     <h2>Finally Learnt Jira ,docker,github</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, hic!</p>
 </body>
 </html>
